changing background source

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <a-scene>
         <a-assets>
-            <img id="b-sunrise" src="b-sunrise.jpg">
+            <img id="b-sunrise" src="green-and-orange-gradient-9814.jpg">
         </a-assets>
         
         <a-sky src="#b-sunrise"></a-sky>
